# self-improving-agent

./: .gitignore  README.blog.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
plans/: agent-improvement-v1.md  agent-plan.md  agent-test.md
skills/analyze-agent-traces-logfire/: SKILL.md
src/agent/: agent.py  cases.json  eval.py
